camera now takes photo and receives to be placed back in the app

--- a/PersonalBlog/app/src/main/res/layout/content_home_page.xml
+++ b/PersonalBlog/app/src/main/res/layout/content_home_page.xml
@@ -35,4 +35,10 @@
         android:layout_below="@+id/OpenGallery"
         android:text="Make Video Post"
         android:id="@+id/VideoPost"/>
+    <ImageView
+        android:id="@+id/ivImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/VideoPost"
+        android:src="@mipmap/ic_launcher" />
 </RelativeLayout>
