added code to take video and display it in a video view, but we need to add playback controls to it

--- a/PersonalBlog/app/src/main/res/layout/content_home_page.xml
+++ b/PersonalBlog/app/src/main/res/layout/content_home_page.xml
@@ -41,4 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/VideoPost"
         android:src="@mipmap/ic_launcher" />
+    <VideoView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ivImage"
+        android:id="@+id/VideoView"/>
 </RelativeLayout>
