--- a/PersonalBlog/app/src/main/res/layout/activity_new_post.xml
+++ b/PersonalBlog/app/src/main/res/layout/activity_new_post.xml
@@ -102,7 +102,11 @@
                     android:layout_height="match_parent"
                     android:id="@+id/videoView"
                     android:layout_gravity="center_vertical"
-                    android:alpha="0" />
+                    android:alpha="0"
+                    android:background="#000000"
+                    android:layout_alignParentEnd="false"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#000000" />
 
             </RelativeLayout>
         </LinearLayout>
