--- a/PersonalBlog/app/src/main/res/layout/activity_home_page.xml
+++ b/PersonalBlog/app/src/main/res/layout/activity_home_page.xml
@@ -38,10 +38,8 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/postListView"
+        android:id="@android:id/list"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/postTitleView" />
-
-
 </RelativeLayout>
