--- a/PersonalBlog/app/src/main/res/layout/lock_screen.xml
+++ b/PersonalBlog/app/src/main/res/layout/lock_screen.xml
@@ -1,73 +1,115 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:minHeight="40dp">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="hcil.umd.edu.cmsc434calculator.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/postTitleView"
-        android:textSize="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
 
-    <ScrollView
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:id="@+id/mainListView"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/button1">
+        android:id="@+id/gridLayoutCalculator"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="89dp"
+            android:id="@+id/textViewOutputScreen"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_columnSpan="4"
+            android:textSize="50sp"
+            android:layout_gravity="fill"
+            android:padding="4dp"
+            android:textAlignment="center" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:text="7"
+            android:id="@+id/buttonKey7"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
+            android:text="8"
+            android:id="@+id/buttonKey8"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
+            android:text="9"
+            android:id="@+id/buttonKey9"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
+            android:text="4"
+            android:id="@+id/buttonKey4"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
+            android:text="5"
+            android:id="@+id/buttonKey5"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
+            android:text="6"
+            android:id="@+id/buttonKey6"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
             android:text="1"
-            android:id="@+id/button1"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/button2" />
-    </ScrollView>
+            android:id="@+id/buttonKey1"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2"
-        android:id="@+id/button7"
-        android:layout_alignTop="@+id/button1"
-        android:layout_toEndOf="@+id/button1" />
+        <Button
+            android:text="2"
+            android:id="@+id/buttonKey2"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="6"
-        android:id="@+id/button5"
-        android:layout_below="@+id/button1"
-        android:layout_toEndOf="@+id/button1" />
+        <Button
+            android:text="3"
+            android:id="@+id/buttonKey3"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="7"
-        android:id="@+id/button6"
-        android:layout_alignTop="@+id/button5"
-        android:layout_alignStart="@+id/postTitleView" />
+        <Button
+            android:text="0"
+            android:id="@+id/buttonKey0"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button1"
-        android:layout_toEndOf="@+id/button4" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="5"
-        android:id="@+id/button4"
-        android:layout_below="@+id/button1"
-        android:layout_toStartOf="@+id/button6" />
-
+    </GridLayout>
 
 </RelativeLayout>
