--- a/PersonalBlog/app/src/main/res/layout/content_detail_page.xml
+++ b/PersonalBlog/app/src/main/res/layout/content_detail_page.xml
@@ -42,18 +42,21 @@
             android:orientation="vertical"
             android:minHeight="300dp">
 
+            <VideoView
+                android:id="@+id/videoContent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
             <TextView
                 android:id="@+id/textContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
             <ImageView
                 android:id="@+id/imageContent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <VideoView
-                android:id="@+id/videoContent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/voiceMemoContent"
                 android:layout_width="match_parent"
