--- a/PersonalBlog/app/src/main/res/layout/lock_screen.xml
+++ b/PersonalBlog/app/src/main/res/layout/lock_screen.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentEnd="true">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="240dp"
             android:layout_height="89dp"
             android:id="@+id/textViewOutputScreen"
             android:layout_row="0"
@@ -102,10 +102,28 @@
             android:layout_height="100dp" />
 
         <Button
+            android:text="Delete"
+            android:id="@+id/delete"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
             android:text="0"
             android:id="@+id/buttonKey0"
             android:layout_row="4"
             android:layout_column="1"
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="120dp"
+            android:layout_height="100dp" />
+
+        <Button
+            android:text="Unlock"
+            android:id="@+id/unlock"
+            android:layout_row="4"
+            android:layout_column="2"
             android:layout_gravity="fill_horizontal"
             android:layout_width="120dp"
             android:layout_height="100dp" />
