getting video and photo accross

--- a/PersonalBlog/app/src/main/res/layout/content_detail_page.xml
+++ b/PersonalBlog/app/src/main/res/layout/content_detail_page.xml
@@ -28,19 +28,13 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:id="@+id/mainListView"
-        android:layout_below="@+id/backButton"
-        android:layout_alignEnd="@+id/deleteButton">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:minHeight="300dp">
+            android:minHeight="300dp"
+            android:layout_below="@+id/backButton">
 
             <TextView
                 android:id="@+id/textContent"
@@ -48,7 +42,7 @@
                 android:layout_height="wrap_content"/>
             <ImageView
                 android:id="@+id/imageContent"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <VideoView
                 android:id="@+id/videoContent"
@@ -61,8 +55,4 @@
                 android:text="Play Voice Memo" />
 
         </LinearLayout>
-
-    </ScrollView>
-
-
 </RelativeLayout>
