--- a/PersonalBlog/app/src/main/res/layout/content_detail_page.xml
+++ b/PersonalBlog/app/src/main/res/layout/content_detail_page.xml
@@ -33,6 +33,7 @@
         android:layout_height="325dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/backButton"
+        android:fillViewport="true"
         android:id="@+id/scrollView">
 
         <TextView
@@ -50,28 +51,29 @@
         android:layout_alignParentStart="true"
         android:weightSum="1">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="139dp"
             android:id="@+id/mediaLayout"
-            android:layout_weight="0.05">
+            android:orientation="horizontal">
             <ImageView
                 android:id="@+id/imageContent"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:contentDescription="picturePosted"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:adjustViewBounds="true"/>
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:adjustViewBounds="true"
+                android:layout_weight="1"/>
 
             <VideoView
                 android:id="@+id/videoContent"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/imageContent"
-                android:layout_alignParentBottom="true"/>
-        </RelativeLayout>
+                android:layout_centerHorizontal="true"
+                android:layout_alignLeft="@+id/imageContent"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
         <Button
             android:id="@+id/voiceMemoContent"
