--- a/PersonalBlog/app/src/main/res/layout/lock_screen.xml
+++ b/PersonalBlog/app/src/main/res/layout/lock_screen.xml
@@ -7,8 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hcil.umd.edu.cmsc434calculator.MainActivity"
-    android:background="#b9b8b2">
+    tools:context="hcil.umd.edu.cmsc434calculator.MainActivity">
 
 
     <GridLayout
@@ -17,11 +16,10 @@
         android:id="@+id/gridLayoutCalculator"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:background="#b9b8b2">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="240dp"
             android:layout_height="89dp"
             android:id="@+id/textViewOutputScreen"
             android:layout_row="0"
@@ -34,102 +32,76 @@
             android:textColor="#000000" />
 
         <Button
-            android:text="7"
+            android:layout_width="110dp"
+            android:layout_height="100dp"
             android:id="@+id/buttonKey7"
             android:layout_row="3"
             android:layout_column="0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:text="7" />
 
         <Button
             android:text="8"
             android:id="@+id/buttonKey8"
             android:layout_row="3"
             android:layout_column="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="9"
             android:id="@+id/buttonKey9"
             android:layout_row="3"
             android:layout_column="2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="4"
             android:id="@+id/buttonKey4"
             android:layout_row="2"
             android:layout_column="0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="5"
             android:id="@+id/buttonKey5"
             android:layout_row="2"
             android:layout_column="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="6"
             android:id="@+id/buttonKey6"
             android:layout_row="2"
             android:layout_column="2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="1"
             android:id="@+id/buttonKey1"
             android:layout_row="1"
             android:layout_column="0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="2"
             android:id="@+id/buttonKey2"
             android:layout_row="1"
             android:layout_column="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="3"
             android:id="@+id/buttonKey3"
             android:layout_row="1"
             android:layout_column="2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="Delete"
@@ -137,11 +109,8 @@
             android:layout_row="4"
             android:layout_column="0"
             android:layout_gravity="fill_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="0"
@@ -149,11 +118,8 @@
             android:layout_row="4"
             android:layout_column="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
         <Button
             android:text="Unlock"
@@ -161,11 +127,8 @@
             android:layout_row="4"
             android:layout_column="2"
             android:layout_gravity="fill_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"/>
+            android:layout_width="110dp"
+            android:layout_height="100dp" />
 
     </GridLayout>
 
